<resources>
    <string name="app_name">CatRunner</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="title_info">About</string>
    <string name="txt_total_km">Total km</string>
    <string name="txt_total_h">Total h</string>
    <string name="txt_km">km</string>
    <string name="txt_mil">mil</string>
    <string name="txt_h">h</string>
    <string name="txt_on">on</string>
    <string name="txt_off">off</string>
    <string name="txt_help">Help</string>
    <string name="txt_developers">Developers</string>
    <string name="txt_unit">Unit</string>
    <string name="txt_sounds">Sounds</string>
    <string name="txt_map">Map</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_language">Language</string>
    <string name="txt_name">Name</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">male</string>
    <string name="txt_female">female</string>
    <string name="txt_other">other</string>
    <string name="txt_height">Height</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_birth">Birth</string>

    <string name="txt_hello">HELLO.</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_login_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_oops">Oops, I forgot my password</string>
    
    <string name="txt_description">DESCRIPTION</string>
    <string name="txt_authors">AUTHORS</string>
    <string name="txt_share">SHARE &amp; RATE US</string>
    <string name="txt_app_description">What will happen if you combine cats and running in one app?</string>

    <string name="kek">You are at home</string>
    <string name="title_activity_map">Map</string>
</resources>
