<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.user.catrunner.MainViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frgmCont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_btn_shape"
                android:contentDescription="@string/title_profile"
                android:onClick="@{viewModel::setFragmentNumber}"
                android:src="@drawable/ic_cat_25dp" />

            <ImageButton
                android:id="@+id/btn_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_btn_shape"
                android:contentDescription="@string/title_history"
                android:onClick="@{viewModel::setFragmentNumber}"
                android:src="@drawable/ic_history_24dp" />

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_btn_shape"
                android:contentDescription="@string/app_name"
                android:onClick="@{viewModel::setFragmentNumber}"
                android:src="@drawable/ic_home_25dp" />

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_btn_shape"
                android:contentDescription="@string/title_settings"
                android:onClick="@{viewModel::setFragmentNumber}"
                android:src="@drawable/ic_settings_25dp" />

            <ImageButton
                android:id="@+id/btn_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/menu_btn_shape"
                android:contentDescription="@string/title_info"
                android:onClick="@{viewModel::setFragmentNumber}"
                android:src="@drawable/ic_i_25dp" />

        </LinearLayout>

    </LinearLayout>
</layout>