<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textSize="22sp"
            android:text="@string/txt_description"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/app_description"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_description"
            android:textSize="18sp"
            android:singleLine="false"/>

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/title_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textSize="22sp"
            android:text="@string/txt_authors"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/app_authors"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="18sp"
            android:singleLine="false"/>

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/title_share_and_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textSize="22sp"
            android:text="@string/txt_share"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_instagram"
                android:contentDescription="@string/txt_share"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_instagram"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/img_google_play"
                android:contentDescription="@string/txt_share"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_google_play"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/img_twitter"
                android:contentDescription="@string/txt_share"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_twitter"
                android:layout_margin="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>